--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+/* Botones guardar como favorito */
 .favorite-btn {
     background: none;
     border: none;
